Add stop bubbling handler and restructure modal for file upload

--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-upload-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-upload-view-styles.scss
@@ -16,11 +16,13 @@ $blue: #3897f0;
   align-items: center;
   justify-content: center;
   position: fixed;
+  width: 100vw;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 300;
+  z-index: 200;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .upload-photo-form-content {
