--- a/app/assets/stylesheets/components/header-styles.scss
+++ b/app/assets/stylesheets/components/header-styles.scss
@@ -19,6 +19,7 @@ $blue: #3897f0;
   height: 77px;
   background-color: $white;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  z-index: 300;
 }
 
 .main-header-content {
