--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-upload-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-upload-view-styles.scss
@@ -22,7 +22,7 @@ $blue: #3897f0;
   right: 0;
   bottom: 0;
   z-index: 200;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.75);
 }
 
 .upload-photo-form-content {
@@ -37,16 +37,56 @@ $blue: #3897f0;
   border-radius: 5px;
 }
 
-.upload-photo-dropzone {
-  width: 100%;
-  height: 300px;
-  background-color: $light-gray-1;
-  border: 2px dashed $light-gray-4;
+.uploaded-preview {
+  width: 500px;
+  max-height: 500px;
+  object-fit: cover;
+  object-position: 50% 50%;
   border-radius: 5px;
+  margin-bottom: 20px;
+  z-index: 300;
+}
+
+.upload-photo-dropzone {
+  width: 500px;
+  justify-content: center;
+  align-items: center;
+  background-color: $light-gray-1;
+  border: dashed 8px $light-gray-4;
+  border-width: 2px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.upload-photo-dropzone-content {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.upload-image-icon {
+  margin-bottom: 30px;
+}
+
+.upload-photo-text {
+  color: $black;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
 }
 
 .upload-photo-description-input {
-  width: 100%;
+  width: 500px;
+  background-color: $light-gray-1;
+  font-size: 15px;
+  margin-bottom: 20px;
+  color: $black;
+  resize: none;
+  border: 1px solid $light-gray-4;
+  border-radius: 5px;
 }
 
 .upload-photo-form-buttons {
@@ -54,10 +94,15 @@ $blue: #3897f0;
   align-items: center;
 }
 
-.upload-photo-form-button {
+.photo-form-button {
   width: 120px;
+  height: 40px;
+  margin: 0px 20px;
+  font-size: 18px;
+}
+
+.cancel {
   background-color: $off-white;
   border-color: $light-gray-3;
   color: $black;
-  margin: 0px 20px;
 }
