--- a/app/assets/stylesheets/logged_in_views/user-profile-view/profile-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/user-profile-view/profile-view-styles.scss
@@ -17,6 +17,7 @@ $blue: #3897f0;
 .profile-view {
   display: flex;
   flex-direction: column;
+  align-items: center;
   max-width: 975px;
   margin: 0 auto 30px;
 }
@@ -101,7 +102,7 @@ $blue: #3897f0;
   display: grid;
   grid-template-columns: 33% 33% 33%;
   grid-template-rows: 33% 33% 33%;
-  grid-gap: 24px 18px;
+  grid-gap: 18px 2px;
   align-items: center;
 }
 
@@ -114,8 +115,8 @@ $blue: #3897f0;
 }
 
 .post-grid-item {
-  width: 295px;
-  height: 295px;
+  width: 290px;
+  height: 290px;
   object-fit: cover;
   object-position: 50% 50%;
   // width: auto;
