Fix style declaration in button component

--- a/app/assets/stylesheets/components/button-styles.scss
+++ b/app/assets/stylesheets/components/button-styles.scss
@@ -29,10 +29,12 @@ $blue: #3897f0;
 
 .button.link {
   // Adjusts for styles on react-router-dom Link compoonent
+  outline: none;
   padding: 0;
   border: 0;
 };
 
 .disabled-button:hover {
+  outline: none;
   cursor: not-allowed;
 }
