Add description below title on sign up screen

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -26,11 +26,11 @@ $off-white: #FAFAFA;
 
 .logged-out-view {
   display: flex;
+  // background-image: url("https://s3-us-west-2.amazonaws.com/instagraph-aa/iphone-wood-background.jpeg");
   align-items: stretch;
   justify-content: center;
   margin: 0 auto;
   max-width: 935px;
-  width: 100%;
 }
 
 .hidden {
