--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -5,7 +5,8 @@ $off-white: #FAFAFA;
   flex-direction: column;
   align-items: stretch;
   justify-content: stretch;
-  background: $off-white;
+  background-image: url("https://s3-us-west-2.amazonaws.com/instagraph-aa/nature-board-wood-antique-retro-texture-560002-pxhere.com.jpg");
+  // background: $off-white;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -26,7 +27,6 @@ $off-white: #FAFAFA;
 
 .logged-out-view {
   display: flex;
-  // background-image: url("https://s3-us-west-2.amazonaws.com/instagraph-aa/iphone-wood-background.jpeg");
   align-items: stretch;
   justify-content: center;
   margin: 0 auto;
