Add background image to login and main feed view

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -6,7 +6,7 @@ $off-white: #FAFAFA;
   align-items: stretch;
   justify-content: stretch;
   background-image: url("https://s3-us-west-2.amazonaws.com/instagraph-aa/nature-board-wood-antique-retro-texture-560002-pxhere.com.jpg");
-  // background: $off-white;
+  background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -18,9 +18,12 @@ $off-white: #FAFAFA;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image: url("https://s3-us-west-2.amazonaws.com/instagraph-aa/nature-board-wood-antique-retro-texture-560002-pxhere.com.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
   justify-content: stretch;
   margin: 0 auto;
-  max-width: 935px;
   width: 100%;
   padding-top: 140px;
 }
