Add autofocus to comment form on post list item

--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -71,6 +71,10 @@ $blue: #3897f0;
   height: 40px;
 }
 
+.post-action-button:hover {
+  cursor: pointer;
+}
+
 .post-action-button:focus {
   outline: none;
 }
