Fix padding on grid view for profile

--- a/app/assets/stylesheets/logged_in_views/user-profile-view/profile-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/user-profile-view/profile-view-styles.scss
@@ -128,6 +128,7 @@ $blue: #3897f0;
   grid-template-rows: 33% 33% 33%;
   grid-gap: 18px 2px;
   align-items: center;
+  padding-bottom: 180px;
 }
 
 .post-grid-row {
