Add basic view to login page

--- a/app/assets/stylesheets/logged_out_views/signup_view/signup-view-styles.scss
+++ b/app/assets/stylesheets/logged_out_views/signup_view/signup-view-styles.scss
@@ -15,6 +15,9 @@ $blue: #3897f0;
 .signup-view-preview {
   border: 1px solid $light-gray-2;
   background-color: $white;
+  height: 350px;
+  width: 500px;
+  margin-right: 20px;
 }
 
 .signup-view-container {
