Add name to bio section

--- a/app/assets/stylesheets/logged_in_views/user-profile-view/profile-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/user-profile-view/profile-view-styles.scss
@@ -96,6 +96,11 @@ $blue: #3897f0;
   margin-left: 4px;
 }
 
+.main-profile-user-bio {
+  font-size: 16px;
+  line-height: 22px;
+}
+
 // Body (empty) =========================================
 .post-grid-empty-view {
   display: flex;
