Add styling to name for bio section

--- a/app/assets/stylesheets/logged_in_views/user-profile-view/profile-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/user-profile-view/profile-view-styles.scss
@@ -96,9 +96,16 @@ $blue: #3897f0;
   margin-left: 4px;
 }
 
+.main-profile-user-bio-name {
+  font-weight: bold;
+  margin-right: 5px;
+  display: inline;
+}
+
 .main-profile-user-bio {
   font-size: 16px;
   line-height: 22px;
+  display: inline;
 }
 
 // Body (empty) =========================================
