--- a/app/assets/stylesheets/logged_out_views/signup_view/signup-view-styles.scss
+++ b/app/assets/stylesheets/logged_out_views/signup_view/signup-view-styles.scss
@@ -88,6 +88,11 @@ $blue: #3897f0;
   font-weight: 600;
 }
 
+.app-preview-monitor {
+  width: 100%;
+  height: 100%;
+}
+
 // Animation
 @-webkit-keyframes fadeIn {
   0% {opacity: 0;}
