--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -5,7 +5,12 @@ $off-white: #FAFAFA;
   flex-direction: column;
   align-items: stretch;
   justify-content: stretch;
-  background-image: url("https://s3-us-west-2.amazonaws.com/instagraph-aa/nature-board-wood-antique-retro-texture-560002-pxhere.com.jpg");
+  // background-image: url("https://s3-us-west-2.amazonaws.com/instagraph-aa/nature-board-wood-antique-retro-texture-560002-pxhere.com.jpg");
+  background: $off-white;
+  // background: -moz-linear-gradient(45deg, #44537f 0%, #0d0f26 40%, #000000 100%);
+  // background: -webkit-linear-gradient(45deg, #44537f 0%,#0d0f26 40%,#000000 100%);
+  // background: linear-gradient(45deg, #44537f 0%,#0d0f26 40%,#000000 100%);
+  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#44537f', endColorstr='#000000',GradientType=1 );
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -18,7 +23,6 @@ $off-white: #FAFAFA;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("https://s3-us-west-2.amazonaws.com/instagraph-aa/nature-board-wood-antique-retro-texture-560002-pxhere.com.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
